eks-modules/Networking/igw.tf
resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.eks_vpc.id

    tags = {
      Name = "${var.cluster_name}-igw-${var.env}"
    }
  
}
