eks-modules/Networking/vpc.tf
resource "aws_vpc" "eks_vpc" {
    cidr_block = var.cidr_block
    enable_dns_hostnames = true  # allows resources in your VPC to resolve DNS queries (without this you cannot connect or ping or curl to domain names eg.(google.com))
    enable_dns_support = true   # automatically assign public DNS hostnames to EC2 instances that have public IPs eg: ec2-13-232-X-X.ap-south-1.compute.amazonaws.com
    instance_tenancy = "default"
  tags = {
    Name = "${var.cluster_name}-vpc-${var.env}"
  }
}
